--- a/widgets/clock-renderer.html
+++ b/widgets/clock-renderer.html
@@ -28,6 +28,8 @@ body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; }
   background: transparent;
   box-sizing: border-box;
   border: 1px solid rgba(0,0,0,0.08);
+  width: 100%;
+  text-align: center;
 }
 .theme-dark .clock { border-color: rgba(255,255,255,0.08); }
 .theme-minimal .clock { border: none; padding: 8px; }
